--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ requires-python = ">=3.9"
 dependencies = [
 ]
 
+[project.scripts]
+fibad = "fibad_cli.main:main"
+fibad-train = "fibad_cli.train:main"
+fibad-predict = "fibad_cli.predict:main"
+
 [project.urls]
 "Source Code" = "https://github.com/lincc-frameworks/fibad"
 
