First working version of HSC download verb, and single CLI entrypoint
Dutifully downloads HSC cutouts for 10 sources from a fits file
using HSC's downloadCutout utility

Modified CLI to use a single entrypoint with the idea to centralize
argument and config parsing independent of what verb is used.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,11 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = [
+    "astropy" # Used to load fits files of sources to query HSC cutout server
 ]
 
 [project.scripts]
 fibad = "fibad_cli.main:main"
-fibad-train = "fibad_cli.train:main"
-fibad-predict = "fibad_cli.predict:main"
 
 [project.urls]
 "Source Code" = "https://github.com/lincc-frameworks/fibad"
