Initial commit for config file handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = [
+    "toml",
+    "torch",
+    "torchvision",
 ]
 
 [project.scripts]
