--- a/tests/fibad/test_data/test_default_config.toml
+++ b/tests/fibad/test_data/test_default_config.toml
@@ -6,7 +6,7 @@ model_name = "example_model" # Use a built-in FIBAD model
 model_class = "new_thing.cool_model.CoolModel" # Use a custom model
 
 [train.model]
-model_weights = "example_model.pth"
+model_weights_filepath = "example_model.pth"
 layers = 3
 
 [predict]
