--- a/tests/fibad/test_data/test_user_config.toml
+++ b/tests/fibad/test_data/test_user_config.toml
@@ -2,7 +2,7 @@
 use_gpu = false
 
 [train.model]
-model_weights = "final_best.pth"
+model_weights_filepath = "final_best.pth"
 layers = 3
 
 [predict]
