Working version of ExampleAutoencoder that runs on CIFAR10 dataset

--- a/.gitignore
+++ b/.gitignore
@@ -149,5 +149,6 @@ _html/
 # Project initialization script
 .initialize_new_project.sh
 
-# General purposes data
+# Default save locations for fibad
 data/
+example_model.pth
