--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -31,7 +31,7 @@ offset = 0
 num_sources = 10
 
 [model]
-name = "ExampleCNN"
+name = "ExampleAutoencoder"
 
 # An example of requesting an external model class
 # external_class = "user_package.submodule.ExternalModel"
