Initial version of logging for fibad.
* Almost all print statements have been changed to logs.
* Logging is initialized in the Fibad object, where the config is parsed
* The logger name is 'fibad' which allows automatic roll-up from other
  modules within fibad (but not fibad_cli) by simply creating a local
  logging handle with:

  import logging
  logger = logging.getLogger(__name__)

* This mechanism also works for the downloadCutout code, which has been
  converted to logging.
* Added documentation to the default config about the log levels
  and configurable destinations.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -1,6 +1,21 @@
 [general]
 use_gpu = true
 
+# Destination of log messages
+# 'stderr' and 'stdout' specify the console.
+log_destination = "stderr"
+# A path name specifies a file e.g.
+# log = "fibad_log.txt"
+
+# Lowest log level to emit.
+# As you go down the list, fibad will become more verbose in the log.
+#
+# log_level = "critical" # Only emit the most severe of errors
+# log_level = "error"    # Emit all errors
+# log_level = "warning"  # Emit warnings and all errors
+log_level = "info"     # Emit informational messages, warnings and all errors
+# log_level = "debug"    # Very verbose, emit all log messages.
+
 [download]
 sw = "22asec"
 sh = "22asec"
