Adding user-specified cutout crop size. - Objects who have any cutouts not capable of providing enough pixels are pruned - data_loader:crop_to is the config where pixel values are specified - Not providing the config gives you the old auto-detect behavior where the   largest size that will work for all images in the data path is chosen.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -59,6 +59,13 @@ name = "HSCDataLoader"
 # Directory path where the data is stored
 path = "./data"
 
+# Pixel dimensions used to crop all images prior to loading. Will prune any images that are too small.
+#
+# If not provided, the default is to scan the directory for the smallest dimensioned files, and use 
+# those pixel dimensions as the crop size.
+#
+#crop_to = [100,100]
+
 # Default PyTorch DataLoader parameters
 batch_size = 500
 shuffle = true
