--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -47,8 +47,7 @@ name = "HSCDataLoader"
 # external_class = "user_package.submodule.ExternalDataLoader"
 
 # Directory path where the data is stored
-# path = "./data"
-path = "../hscplay/cutouts/"
+path = "./data"
 
 # Default PyTorch DataLoader parameters
 batch_size = 500
