Remove Michael's password from default config file - Also make it easier to run fibad commands by using ./fibad_config.toml   as the user-supplied config in situations where no config is specified   explicitly

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -22,11 +22,9 @@ sh = "22asec"
 filter = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
 type = "coadd"
 rerun = "pdr3_wide"
-username = "mtauraso@local"
-password = "cCw+nX53lmNLHMy+JbizpH/dl4t7sxljiNm6a7k1"
 max_connections = 2
-fits_file = "../hscplay/temp.fits"
-cutout_dir = "../hscplay/cutouts/"
+fits_file = "./catalog.fits"
+cutout_dir = "./data"
 offset = 0
 num_sources = 500
 
