Adding configurable list of filters to dataloader
Given dataloader:filters as config, the dataloader will:
- Only scan files which are part of its filter set
- Prune objects where the full list of filters provided
  are not present on the filesystem.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -66,6 +66,13 @@ path = "./data"
 #
 #crop_to = [100,100]
 
+# Limit data loader to only particular filters when there are more in the data set.
+#
+# When not provided, the number of filters will be automatically gleaned from the data set.
+# Defaults to not provided.
+#
+#filters = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
+
 # Default PyTorch DataLoader parameters
 batch_size = 500
 shuffle = true
