Adding multithreaded stats and fixing bugs - Removed pwd contextmanager in favor of absolute path filename representation in Rects.   pwd context manager was not compatible with threading.Thread - Stats system now outputs every 30s (controllable with stats_print_interval config) - Stats system creates sensible metrics for a multithreaded system including how   efficiently its multiple connections are being used (e.g. if the server is   throttling how many connections we can hold - Several termination issues have been fixed by making all non-main threads   daemon threads. The result is that everything shuts down dirty on   KeyboardInterrupt. This is okay because the only thing the main thread does   on shutdown is read append-only manifest dicts, so additional download activity   during the shutdown will be presumed to have failed and be overwritten on resume.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -22,11 +22,10 @@ sh = "22asec"
 filter = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
 type = "coadd"
 rerun = "pdr3_wide"
-max_connections = 2
+concurrent_connections = 1
+stats_print_interval = 30
 fits_file = "./catalog.fits"
 cutout_dir = "./data"
-offset = 0
-num_sources = 500
 
 # These control the downloader's HTTP requests and retries
 # `retry_wait` How long to wait before retrying a failed HTTP request in seconds. Default 30s
