Add a fibad top-level method to get the dimensions of downloaded files - Rects in downloadCutout.py now track dimension of the file - Downloader now is a proper object and holds more of its rect   bookkeeping as instance state. - Downloader creation is lightweight, and most work is still in .run() - Example downloader notebook has been updated to use the new interface   to generate histograms of downloaded data.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ examples = [
 dev = [
     "asv==0.6.4", # Used to compute performance benchmarks
     "jupyter", # Clears output from Jupyter notebooks
+    "matplotlib", # For example notebooks
     "pre-commit", # Used to run checks before finalizing a git commit
     "pytest",
     "pytest-cov", # Used to report total code coverage
