First implementation with pytorch ignite to support cpu->multi-gpu scaling (#54)
* WIP - Experimenting with pytorch ignite support for DistributedDataParallel.

* Basic functionality to be tested on computer with GPU/Klone.

* Training works for single node w/ multiple gpus.

* Some polish, and includes per-epoch output of returned loss value.

* Initial changes to example autoencoder.

* WIP commit, all changes will ultimately be removed.

* Minor, temporary config change.

* Replacing `train` with `train_step` in the autoencoder. Changed the behavior of the `batch.to(device)`.

* Removing unused dependency, resetting some changes to the default config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = [
     "astropy", # Used to load fits files of sources to query HSC cutout server
+    "pytorch-ignite", # Used for distributed training, logging, etc.
     "toml", # Used to load configuration files as dictionaries
     "torch", # Used for CNN model and in train.py
     "torchvision", # Used in hsc data loader, example autoencoder, and CNN model data set
