Removing `external_class` as a config parameter, and checking if `name` is a key the registry or a libpath.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -38,20 +38,17 @@ timeout = 3600
 chunk_size = 990
 
 [model]
+# The name of the built-in model to use or the libpath to an external model
+# e.g. "user_package.submodule.ExternalModel" or "ExampleAutoencoder"
 name = "ExampleAutoencoder"
-
-# An example of requesting an external model class
-# external_class = "user_package.submodule.ExternalModel"
 
 weights_filepath = "example_model.pth"
 epochs = 10
 
 [data_loader]
-# Name of data loader to use
+# Name of the built-in data loader to use or the libpath to an external data loader
+# e.g. "user_package.submodule.ExternalDataLoader" or "HSCDataLoader"
 name = "HSCDataLoader"
-
-# An example of requesting an external data loader class
-# external_class = "user_package.submodule.ExternalDataLoader"
 
 # Directory path where the data is stored
 path = "./data"
