Centralize config defaults, add safety for Config updates - All configuration dicts are now ConfigDict. A ConfigDict is a version of   dict that raises RuntimeError quite a lot when you try to mutate it   or when you access values that weren't set at construction time. - There is a new validate step for runtime config that ensures   every config key that appears at runtime has a default defined in   fibad_default_config.toml. - Usages of .get() on config dictionaries have been removed, so all   defaults now live in fibad_default_config.toml. Config access is entirely   via __getitem__ / []. - The sum total of the above means that we expect any new config which is   missing a default value to generate a runtime error as early as possible   if it is referenced anywhere in code, or in a user-supplied configuration. - Several config values have changed representation, because   "not specified" was their default. toml does not support "None" so   all of these values have been set to false in fibad_default_config.toml   accesses to these configs have been updated to be aware that the default   value of 'false' either triggers modal behavior (data_loader/crop_to,   data_loader/filters) or triggers a RuntimeError to prompt the user to   provide it (download/username, download/password). - Except where necessary for model/dataloader class loading, passsing   of individual config sections has been removed. For the most part   all parts of the code have access to all configs. - The data_loader/data and download/cutout_dir configs have been combined   into general/data_dir, to avoid an invalid configuration state where   the downloader and data loader are looking at different directories   for data.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -16,16 +16,21 @@ log_destination = "stderr"
 log_level = "info"     # Emit informational messages, warnings and all errors
 # log_level = "debug"    # Very verbose, emit all log messages.
 
+data_dir = "./data"
+
 [download]
 sw = "22asec"
 sh = "22asec"
 filter = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
 type = "coadd"
 rerun = "pdr3_wide"
-concurrent_connections = 1
-stats_print_interval = 30
+username = false
+password = false
+num_sources = -1 # Values below 1 here indicate all sources in the catalog will be downloaded
+offset = 0
+concurrent_connections = 4
+stats_print_interval = 60
 fits_file = "./catalog.fits"
-cutout_dir = "./data"
 
 # These control the downloader's HTTP requests and retries
 # `retry_wait` How long to wait before retrying a failed HTTP request in seconds. Default 30s
@@ -37,6 +42,13 @@ timeout = 3600
 # `chunksize` How many sky location rectangles should we request in a single request. Default is 990
 chunk_size = 990
 
+# Whether to retrieve the image layer
+image = true
+# Whether to retrieve the variance layer
+variance = false
+# Whether to retrieve the mask layer
+mask = false
+
 [model]
 name = "ExampleAutoencoder"
 
@@ -46,6 +58,9 @@ name = "ExampleAutoencoder"
 weights_filepath = "example_model.pth"
 epochs = 10
 
+base_channel_size = 32
+latent_dim =64
+
 [data_loader]
 # Name of data loader to use
 name = "HSCDataLoader"
@@ -53,27 +68,26 @@ name = "HSCDataLoader"
 # An example of requesting an external data loader class
 # external_class = "user_package.submodule.ExternalDataLoader"
 
-# Directory path where the data is stored
-path = "./data"
-
 # Pixel dimensions used to crop all images prior to loading. Will prune any images that are too small.
 #
-# If not provided, the default is to scan the directory for the smallest dimensioned files, and use 
-# those pixel dimensions as the crop size.
+# If not provided by user, the default of 'false' scans the directory for the smallest dimensioned files, and 
+# uses those pixel dimensions as the crop size.
 #
 #crop_to = [100,100]
+crop_to = false
 
 # Limit data loader to only particular filters when there are more in the data set.
 #
-# When not provided, the number of filters will be automatically gleaned from the data set.
-# Defaults to not provided.
+# When not provided by the user, the number of filters will be automatically gleaned from the data set.
+# Defaults behavior is produced by the false value.
 #
 #filters = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
+filters = false
 
 # Default PyTorch DataLoader parameters
-batch_size = 500
+batch_size = 4
 shuffle = true
-num_workers = 10
+num_workers = 2
 
 [predict]
 batch_size = 32
