--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ _html/
 
 # Default save locations for fibad
 data/
+results/
 example_model.pth
 # Common location to stash personal or notebook example config
 fibad_config.toml
