Predict and Output scaffolding (#70)
* Predict verb works now
* Most Pytorch ignite-specific code has been factored out to `pytorch_ignite.py`
* Results for predict and train are put in timestamped output directories along with the config used to generate them
* Predict saves data to numpy files in the new results directory
* Minor rework to how data sets are handled by pytorch_ignite common code
* New .ids() public member for fibad datasets so results can be tracked by ID
* Output format is object_id.npy in numpy binary format.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -17,6 +17,7 @@ log_level = "info"     # Emit informational messages, warnings and all errors
 # log_level = "debug"    # Very verbose, emit all log messages.
 
 data_dir = "./data"
+results_dir = "./results" # Results get named <verb>-<timestamp> under this directory
 
 [download]
 sw = "22asec"
@@ -87,4 +88,5 @@ shuffle = true
 num_workers = 2
 
 [predict]
+model_weights_file = false
 batch_size = 32
