--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,10 +1,23 @@
 # Changes here will be overwritten by Copier
-_commit: v2.0.2
+_commit: v2.0.3
 _src_path: gh:lincc-frameworks/python-project-template
 author_email: mtauraso@uw.edu
 author_name: LINCC Frameworks
-custom_install: false
+create_example_module: false
+custom_install: true
+enforce_style:
+- ruff_lint
+- ruff_format
+failure_notification: []
+include_benchmarks: true
+include_docs: true
+include_notebooks: true
+mypy_type_checking: none
 package_name: fibad
 project_license: MIT
 project_name: fibad
 project_organization: lincc-frameworks
+python_versions:
+- '3.9'
+- '3.10'
+- '3.11'
