Initial version of filter_catalog feature. - We can take a fits file as a config - We filter objects_ids out of a big dataset based on it - We also skip filesystem checks if there is enough info in the filter catalog. - Lacks any unit testing - Added the prepare verb, but right now it just gives you the dataset object   when run from a notebook.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -90,6 +90,10 @@ crop_to = false
 #filters = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
 filters = false
 
+# A fits file which specifies object IDs to filter a large dataset in [general].data_dir down
+# Implementation is dataset class dependent. Default is false meaning now filtering.
+filter_catalog = false
+
 [data_loader]
 # Default PyTorch DataLoader parameters
 batch_size = 32
