Parallelizing _scan_file_dimensions()
Using Schwimmbad and multiprocessing to parallelize extracting
the dimensions of files in HSCDataSet to effect speedup in 10M+
file datasets.

Not currently tuned to hyak, no speedup yet measured.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "toml", # Used to load configuration files as dictionaries
     "torch", # Used for CNN model and in train.py
     "torchvision", # Used in hsc data loader, example autoencoder, and CNN model data set
+    "schwimmbad", # Used to speedup hsc data loader file scans
 ]
 
 [project.scripts]
