Added GPU monitor, removed all pytorch-ignite references from `train.py`. Replaced pytorch-ignite tensorboard writer with tensorboardX.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "torchvision", # Used in hsc data loader, example autoencoder, and CNN model data set
     "tensorboardX", # Used to log training metrics
     "tensorboard", # Used to log training metrics
+    "GPUtil", # Used to gather GPU usage information
 ]
 
 [project.scripts]
