Temporarily Commenting out momentum as it is not a valid keyword for adam

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -71,7 +71,7 @@ name = "torch.optim.SGD"
 
 # Default PyTorch optimizer parameters. The keys match the names of the parameters
 lr = 0.01
-momentum = 0.9
+#momentum = 0.9
 
 [train]
 weights_filepath = "example_model.pth"
