--- a/tests/fibad/test_data/test_default_config.toml
+++ b/tests/fibad/test_data/test_default_config.toml
@@ -9,5 +9,5 @@ model_class = "new_thing.cool_model.CoolModel" # Use a custom model
 model_weights_filepath = "example_model.pth"
 layers = 3
 
-[predict]
+[infer]
 batch_size = 32
