--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "GPUtil", # Used to gather GPU usage information
     "schwimmbad", # Used to speedup hsc data loader file scans
     "chromadb", # Vector database for fast nearest neighbor searches
+    "umap-learn"
 ]
 
 [project.scripts]
