Holoview based prototype of FIBAD visualizations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,14 @@ dependencies = [
     "tensorboard", # Used to log training metrics
     "GPUtil", # Used to gather GPU usage information
     "schwimmbad", # Used to speedup hsc data loader file scans
+    "holoviews", # Used in Holoviews visualization prototype
+    "bokeh", # Used in Holoviews visualization prototype
+    "jupyter_bokeh", # Used in Holoviews visualization prototype
+    "datashader", # Used in Holoviews visualization prototype
+    "pandas", # Used in Holoviews visualization prototype
+    "numpy", # Used in Holoviews visualization prototype
+    "scipy", # Used in Holoviews visualization prototype
+    "cython", # Used in Holoviews visualization prototype
 ]
 
 [project.scripts]
