Adding credentials file support

--- a/.gitignore
+++ b/.gitignore
@@ -153,5 +153,7 @@ _html/
 data/
 results/
 example_model.pth
+
 # Common location to stash personal or notebook example config
 fibad_config.toml
+credentials.ini
