--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dev = [
     "asv==0.6.4", # Used to compute performance benchmarks
     "jupyter", # Clears output from Jupyter notebooks
     "matplotlib", # For example notebooks
+    "mypy", # Used for static type checking of files
     "pre-commit", # Used to run checks before finalizing a git commit
     "pytest",
     "pytest-cov", # Used to report total code coverage
@@ -116,6 +117,28 @@ ignore = [
     "UP015", # Allow redundant open parameters
     "UP028", # Allow yield in for loop
 ]
+[tool.setuptools.package-data]
+fibad = ["py.typed"]
 
 [tool.coverage.run]
 omit=["src/fibad/_version.py"]
+
+[tool.mypy]
+warn_return_any = true
+warn_unused_configs = true
+
+[[tool.mypy.overrides]]
+module = [
+    'torchvision',
+    'astropy',
+    'astropy.io',
+    'schwimmbad',
+    'torchvision.transforms',
+    'torchvision.datasets',
+    'torchvision.transforms.v2',
+    'tensorboardX',
+    'astropy.table',
+    'GPUtil',
+    'toml',
+    ]
+ignore_missing_imports = true
