Avoiding casting to ConfigDict, instead setting attributes on TOMLDocument for desired behavior. Merging and comment retention seems to work.

--- a/tests/fibad/test_data/test_default_config.toml
+++ b/tests/fibad/test_data/test_default_config.toml
@@ -1,4 +1,7 @@
+# this is the default config file
 [general]
+# set dev_mode to true when developing
+# set to false for production use
 dev_mode = true
 
 [train]
