--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "tensorboard", # Used to log training metrics
     "GPUtil", # Used to gather GPU usage information
     "schwimmbad", # Used to speedup hsc data loader file scans
+    "chromadb", # Used for similarity search
     "holoviews", # Used in Holoviews visualization prototype
     "bokeh", # Used in Holoviews visualization prototype
     "jupyter_bokeh", # Used in Holoviews visualization prototype
