--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -38,8 +38,8 @@ rerun = "pdr3_wide"
 # password = "<your password>"
 credentials_file = "./credentials.ini"
 
-# Alternative method to pass credentials to the downloader. Prefer to use a
-#credentials.ini file to avoid exposing credentials with source control.
+# Alternate way to pass credentials to the downloader. Users should prefer a
+# credentials.ini file to avoid exposing credentials with source control.
 username = false
 password = false
 
@@ -82,7 +82,7 @@ mask = false
 
 
 [model]
-# The name of the model to use. Option are a builtin model class name or import path
+# The name of the model to use. Option are a built-in model class name or import path
 # to an external model. e.g. "ExampleAutoencoder", "user_pkg.model.ExternalModel"
 name = "ExampleAutoencoder"
 
@@ -94,98 +94,96 @@ latent_dim = 64
 
 
 [criterion]
-# The name of the built-in criterion to use or the libpath to an external criterion
+# The name of the built-in criterion to use or the import path to an external criterion
 name = "torch.nn.CrossEntropyLoss"
 
 [optimizer]
-# The name of the built-in optimizer to use or the libpath to an external optimizer
+# The name of the built-in optimizer to use or the import path to an external optimizer
 name = "torch.optim.SGD"
 
-# Default PyTorch optimizer parameters. The keys match the names of the parameters
+# learning rate parameter for default optimizer. The keys match the names of the parameters
 lr = 0.01
+
+# momentum parameter for default optimizer. The keys match the names of the parameters
 momentum = 0.9
 
+
 [train]
+# The name of the file were the model weights will be saved after training.
 weights_filepath = "example_model.pth"
+
+#The number of epochs to train for.
 epochs = 10
-# Set this to the path of a checkpoint file to resume, or continue training,
-# from a checkpoint. Otherwise, set to false to start from scratch.
+
+# If resuming from a check point, set to the path of the checkpoint file.
+# Otherwise set to `false` to start training from the beginning.
 resume = false
+
+# The data_set split to use when training a model.
 split = "train"
 
+
 [data_set]
-# Name of the built-in data loader to use or the libpath to an external data loader
-# e.g. "user_package.submodule.ExternalDataLoader" or "HSCDataSet"
+# Name of the built-in data loader to use or the import path to an external data
+# loader. e.g. "HSCDataSet", "user_pkg.data_set.ExternalDataSet"
 name = "CifarDataSet"
 
-# Pixel dimensions used to crop all images prior to loading. Will prune any images that are too small.
-#
-# If not provided by user, the default of 'false' scans the directory for the smallest dimensioned files, and 
-# uses those pixel dimensions as the crop size.
-#
-#crop_to = [100,100]
+# Crop pixel dimensions for images, e.g., [100, 100]. If false, scans for the
+# smallest image size in [general].data_dir and uses it.
 crop_to = false
 
-# Limit data loader to only particular filters when there are more in the data set.
-#
-# When not provided by the user, the number of filters will be automatically gleaned from the data set.
-# Defaults behavior is produced by the false value.
-#
-#filters = ["HSC-G", "HSC-R", "HSC-I", "HSC-Z", "HSC-Y"]
+# Specific to `hsc_data_set`. Limit to only particular filters from the data set.
+# When `false`, uses all filters found in the data set.
 filters = false
 
-# A fits file which specifies object IDs to filter a large dataset in [general].data_dir down
-# Implementation is dataset class dependent. Default is false meaning now filtering.
+# Path to a fits file that specifies object IDs to use from the data stored in
+# [general].data_dir. Implementation is data_set class dependent. Use `false` for no filtering.
 filter_catalog = false
 
-# How to split the data between training and eval sets.
-# The semantics are borrowed from scikit-learn's train-test-split, and HF Dataset's train-test-split function
-# It is an error for these values to add to more than 1.0 as ratios or the size of the dataset if expressed
-# as integers.
+# For train_size, validation_size, and test_size, the following options are available:
+# A `float` between `0.0` and `1.0` is the proportion of the dataset to include in the split.
+# If `int`, represents the absolute number of samples in the particular split.
+# It is an error for these values to add to more than 1.0 as ratios or the size
+# of the dataset if expressed as integers.
 
-# train_size: Size of the train split
-# If `float`, should be between `0.0` and `1.0` and represent the proportion of the dataset to include in the 
-# train split.
-# If `int`, represents the absolute number of train samples.
-# If `false`, the value is automatically set to the complement of the test size.
+# Size of the train split.
+# If `false`, the value is automatically set to the complement of test_size.
 train_size = 0.6
 
-# validate_size: Size of the validation split
-# If `float`, should be between `0.0` and `1.0` and represent the proportion of the dataset to include in the 
-# train split.
-# If `int`, represents the absolute number of train samples.
-# If `false`, and both train_size and test_size are defined, the value is automatically set to the complement 
-# of the other two sizes summed.
-# If `false`, and only one of the other sizes is defined, no validate split is created
+# Size of the validation split.
+# If `false`, and both train_size and test_size are defined, the value is set
+# to the complement of the other two sizes summed.
+# If `false`, and only one of the other sizes is defined, no validate split is created.
 validate_size = 0.2
 
-# test_size: Size of the test split
-# If `float`, should be between `0.0` and `1.0` and represent the proportion of the dataset to include in the 
-# test split.
-# If `int`, represents the absolute number of test samples.
-# If `false`, the value is set to the complement of the train size.
-# If `train_size` is also `false`, it will be set to `0.25`.
+# Size of the test split.
+# If `false`, the value is set to the complement of train_size.
+# If `false` and `train_size = false`, test_size is set to `0.25`.
 test_size = 0.2
 
-# Number to seed with for generating a random split. False means the data will be seeded from
-# a system source at runtime.
+# Number to seed with for generating a random split. Use `false` to seed from a
+# system source at runtime.
 seed = false
 
-#Controls whether images are cached during data loading. For training, this reduces runtimes
-#after the first epoch.
+# If `true`, cache data in memory during training. For training, this reduces runtimes
+#after the first epoch. Set to `false` to disable caching or when running inference.
 use_cache = true
 
-[data_loader]
-# Default PyTorch DataLoader parameters
-batch_size =32
 
-# We could remove this potentially - pytorch-ignite will default to shuffle=True
-# If the user wanted to explicitly require no shuffling, they could set this to false.
+[data_loader]
+# The number of data points to load at once.
+batch_size = 32
+
+# Whether the input data is shuffled before being loaded.
 shuffle = false
+
+# Number of subprocesses for data loading. Typically between 2 and the number of CPUs.
 num_workers = 2
 
+
 [infer]
+# The path to the model weights file to use for inference.
 model_weights_file = false
-# Select a split ("train", "test", or "validate") to use for inference
-# default of false selects the entire dataset for inference.
+
+# The data_set split to use for inference. Use `false` for entire dataset.
 split = false
