Add lookup verb and verbs-taking-arguments infrastructure - Verbs can now be defined with a class that encapsulates the   cli and notebook interfaces. - Verbs use a registry similar to models and datasets, but   without support for external verbs - Lookup verb with a CLI and notebook interface - Inference now creates an index of object_id -> batch   to facilitate lookups in the batch numpy files - Backwards compatibility: Lookup verb will regenerate   the object_id-> batch index if it does not exist. - Stub implementation of similarity search verb.

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -192,3 +192,7 @@ split = false
 
 # Whether to generate a chromadb vector database of inference results
 chromadb = true
+
+[results]
+# Path to inference results to use for visualization and lookups. Uses latest inference run if none provided.
+inference_dir = false
