Prep for similarity search: adding chromadb to infer (#159)
* Infer builds a chromadb in the results directory, can be disabled with a config
* Infer's numpy output files are per batch now rather than per object.
* Moved example_hsc_dataset.py -> hsc_dataset.py for clarity that it is not an example
* Bugfix to HSCDataset handling of [data_set]filters= config. When given a data dir
  with more filters than specified in [data_set]filters, it now cuts down the
  required filters of the dataset to only those specified in config. Previously
  in this same situation it would prune all objects in the dataset
* Infer verb defaults to choosing the model from the latest training run
  if no model weight path is specified in config.
* Results directories now append a random string of characters to the end
  to avoid folder name collisions happening when two fibad processes starting
  in the same second share a filesystem
* Updated names of configs in tests to match those used currently.
* Fixed parsing of split parameter in HSCDataSet to accept a [infer]split=false

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -189,3 +189,6 @@ model_weights_file = false
 
 # The data_set split to use for inference. Use `false` for entire dataset.
 split = false
+
+# Whether to generate a chromadb vector database of inference results
+chromadb = true
