--- a/tests/fibad/test_data/test_user_config.toml
+++ b/tests/fibad/test_data/test_user_config.toml
@@ -2,7 +2,7 @@
 dev_mode = true
 
 [train.model]
-model_weights_filepath = "final_best.pth"
+weights_filepath = "final_best.pth"
 layers = 3
 
 [infer]
