Moves UMAP kwargs to config file, streamlines code, adds progress bar

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -200,3 +200,9 @@ inference_dir = false
 [umap]
 # Number of data points used to fit the umap transform.
 fit_sample_size = 1024
+name = "umap.UMAP"
+
+["umap.UMAP"]
+# Specify any parameter accepted by https://umap-learn.readthedocs.io/en/latest/api.html#umap
+n_components = 2
+n_neighbors = 15
