adding comments for umap parameters in default config
Co-authored-by: Drew Oldag <47493171+drewoldag@users.noreply.github.com>

--- a/src/fibad/fibad_default_config.toml
+++ b/src/fibad/fibad_default_config.toml
@@ -200,9 +200,16 @@ inference_dir = false
 [umap]
 # Number of data points used to fit the umap transform.
 fit_sample_size = 1024
+
+# Name of the umap implementation to use
 name = "umap.UMAP"
+
 
 ["umap.UMAP"]
 # Specify any parameter accepted by https://umap-learn.readthedocs.io/en/latest/api.html#umap
+# Dimension of the embedded space
 n_components = 2
+
+# Controls how UMAP balances local versus global structure in the data.
+# See official documentation for details.
 n_neighbors = 15
