Adding Tests - Added end-to-end tests of FitsImageDataSet, HSCDataSet, and HyraxCifarDataSet. - These tests are not enabled in automated runs due to CPU/Mem/GPU constraints on GHA runners - New Tests are enabled in CI and disabled in pre-commit - Fixed some bugs in FitsImageDataSet - Turning on docstring tests in the source tree generally, and fixing some collection issues   on python 3.9 - Added error messages to FitsImageDataSet removing xcxc notes

--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -39,4 +39,4 @@ jobs:
         pip list
     - name: Run unit tests with pytest
       run: |
-        python -m pytest
+        python -m pytest -m "not slow"
